# gfax

./: AUTHORS  ChangeLog  FAQ  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  autogen.sh  build-notes  config.h  config.status  configure  configure.in  cvs-notes  gfax.desktop.in  gfax.in  gfax.schemas.in  libtool  mono-gfax.prj  mono-gfax.pws  testfile.ps
cups-stuff/: README  printers.conf
data/: Makefile  Makefile.in  gfax.spec
data/icons/: Makefile  Makefile.am  Makefile.in
data/icons/16x16/: Makefile  Makefile.am  Makefile.in
data/icons/48x48/: Makefile  Makefile.am  Makefile.in
data/icons/scalable/: Makefile  Makefile.am  Makefile.in
debian/: changelog  control  copyright  files  gfax.menu  gfax.postinst  gfax.postrm  rules  rules.old  watch
debian/gfax/DEBIAN/: conffiles  control  md5sums  postinst  postrm
debian/gfax/etc/gconf/schemas/: gfax.schemas
debian/gfax/usr/share/applications/: gfax.desktop
debian/gfax/usr/share/doc/gfax/: README
debian/gfax/usr/share/locale/de/LC_MESSAGES/: gfax.mo
debian/gfax/usr/share/locale/it/LC_MESSAGES/: gfax.mo
debian/gfax/usr/share/locale/nl/LC_MESSAGES/: gfax.mo
glade/: gfax.glade  send-druid.glade  send-druid.glade.old
pixmaps/: Makefile.am  Makefile.in
po/: Makefile  Makefile.in  POTFILES  POTFILES.in  de.po  en_CA.gmo  en_CA.po  it.po  lv.gmo  lv.po  nl.po
scripts/: cups-gfax.in  getstrings.pl  make-deb.sh  make-rpm.sh  postinstall.sh
src/: Defines.cs.in  Makefile  Makefile.am  Makefile.in  TrayLib.cs  cups-gfax.in  efax.cs  evolution.cs  fax.cs  gfax.exe.mdb  gfaxphonebook.cs  gfaxprefs.cs  gfaxsend.cs  gui.cs  guitools.cs  hylafax.cs  main.cs  newphonebook.cs  phonebook.cs  sendphonebook.cs
