AC_INIT(src/main.cs)
#AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(gfax, 0.7.7)
AM_MAINTAINER_MODE
AM_CONFIG_HEADER(config.h)

GNOME_COMMON_INIT
GNOME_DOC_INIT

AC_PROG_INSTALL
AC_PROG_CC
AC_ISC_POSIX
AC_HEADER_STDC
AC_PROG_INTLTOOL([0.25])
AM_PROG_LIBTOOL
#
# Find gconftool-2
#
AC_PATH_PROG(GCONFTOOL, gconftool-2)
AM_GCONF_SOURCE_2

#
# Setup GETTEXT
#
ALL_LINGUAS="en_CA de nl it lv"
GETTEXT_PACKAGE=gfax
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [Gettext package])
AM_GLIB_GNU_GETTEXT

#
# Find pkg-config
#
AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
if test "x$PKG_CONFIG" = "xno"; then
        AC_MSG_ERROR([You need to install pkg-config])
fi

#
# Find mcs
#
AC_PATH_PROG(MCS, gmcs2)
if test "x$MCS" = "x"; then
        AC_MSG_ERROR([Can't find gmcs in your PATH])
fi

#

AM_CONDITIONAL(GCONF_SCHEMAS_INSTALL, true)

#
# Use DBus# to export our remote control if available.
#
PKG_CHECK_MODULES(DBUS, dbus-sharp, ENABLE_DBUS="yes", ENABLE_DBUS="no")
AC_ARG_ENABLE(dbus,
              [  --enable-dbus=[no/yes]    compile with dbus support (default: yes)],
              ENABLE_DBUS="$enableval")
AM_CONDITIONAL(ENABLE_DBUS, test "$ENABLE_DBUS" = "yes")
AC_SUBST(DBUS_LIBS)


libpath=`basename ${libdir}`

AC_SUBST(install_sh)

#
# Gfax needs Gtk# Gnome# GConf#
#
PKG_CHECK_MODULES(GFAX, glib-sharp-2.0 gtk-sharp-2.0 gnome-sharp-2.0 gconf-sharp-2.0 gconf-sharp-peditors-2.0
	glade-sharp-2.0 evolution-sharp)
AC_SUBST(GFAX_LIBS)

AC_OUTPUT([
Makefile
data/Makefile
src/Makefile
po/Makefile.in
data/icons/Makefile
data/icons/16x16/Makefile
data/icons/48x48/Makefile
data/icons/scalable/Makefile
])
